--- a/clients/package.json
+++ b/clients/package.json
@@ -10,6 +10,7 @@
   "author": "Vytautas Valutis (http://github.com/VytautasValutis)",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "laravel-mix": "^6.0.49"
   },
   "devDependencies": {
