--- a/clients/composer.json
+++ b/clients/composer.json
@@ -13,5 +13,7 @@
             "email": "dnc908@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "ramsey/uuid": "^4.7"
+    }
 }
